fix spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,11 +47,6 @@
     padding: 10px;
 }
 
-.articles-list {
-    padding: 15px;
-}
-
-
 .list-article-item {
     margin: 35px 0px;
 }
